<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="TODO_nothing_here">Nothing here yet. Press the back button to go back.</string>
    
    <string name="go_string">Go!</string>
    
    
    
    <!-- Background colors -->
    <color name="cyan">#ccffff</color>
    <color name="white">#ffffff</color>

    <!-- Actionbar Options -->
    <string name="options_logout">Logout</string>
    <string name="options_home">Return to Home</string>
    
    
    <!-- Screen Titles -->
    <string name="home_name">FunPath</string>
    <string name="login_name">FunPath - Login</string>
    <string name="register_name">FunPath - Register</string>
    <string name="configure_name">FunPath - Configure Run</string>
    <string name="preview_name">FunPath - Preview Run</string>
    <string name="savedruns_name">FunPath - Saved Runs</string>
    <string name="finish_name">FunPath - Rate Run</string>
    <string name="tracker_name">FunPath - Running</string>

    
    <!-- HomeActivity Strings -->
    <string name="generate_custom_run">Generate Custom Run</string>
    <string name="view_past_runs">View Past Runs</string>
    <string name="welcome_to_funpath">Welcome to FunPath!</string>
    <string name="hi">Hi</string>
    
    <!-- LoginActivity Strings -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="new_user_button">New User?</string>
    
    <!-- RegisterActivity Strings -->
	<string name="register_username">Username</string>
	<string name="register_password">Password</string>
	<string name="register_password_confirm">Confirm Password</string>
	<string name="register_button">Register</string>
	<string name="return_to_login_button">Back to Login</string>
    
    <!-- ConfigureRunActivity Strings -->
   	<string name="distance">How far would you like to run?</string>
	<string name="location">Current location (ZIP):</string>
	<string name="elevation">How hilly would you like your run?</string>
	<string name="low_elevation_change">Low</string>
	<string name="med_elevation_change">Med</string>
	<string name="high_elevation_change">High</string>
	<string name="next_button">Next</string>
    
    <!-- PreviewRunActivity Strings -->
    <string name="preview_distance">Distance:</string>
    <string name="preview_elevation">Elevation Change:</string>
    <string name="preview_generate_run">Generate New Run</string>
    <string name="preview_begin_run">Begin Run</string>
    
    <!-- SavedRunsActivity Strings -->
    <string name="saved_distance">Distance:</string>
	<string name="saved_time">Time:</string>
    <string name="saved_elevation">Elevation:</string>
    <string name="rerun_saved">Re-Run</string>
    <string name="undo">Undo</string>
    
    <!-- FinishRunActivity Strings -->
    <string name="review_distance">Distance:</string>
    <string name="review_time">Time:</string>
	<string name="finish_review_button">Done</string>
    
    <!-- RunTrackerActivity Strings -->
	<string name="pause_run_button">Pause Run</string>
	<string name="finish_run_button">Finish Run</string>

    
</resources>
