<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmsc434.funpath.login.HomeActivity" >

    <TextView
        android:id="@+id/username_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_name" />
  	
    
  	<EditText
  	    android:id="@+id/register_username"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_above="@+id/register_password"
  	    android:layout_alignLeft="@+id/register_password"
  	    android:layout_marginBottom="27dp"
  	    android:ems="10"
  	    android:hint="@string/register_username" >
  	    
  	    <requestFocus />
	</EditText>
  	
    
	<EditText
  	    android:id="@+id/register_password"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_above="@+id/register_password_confirm"
  	    android:layout_alignLeft="@+id/register_password_confirm"
  	    android:hint="@string/register_password"
  	    android:layout_marginBottom="30dp"
  	    android:ems="10" 
  	    android:inputType="textPassword" />
  	  	
  	<EditText
        android:id="@+id/register_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:hint="@string/register_password_confirm"
        android:ems="10"
        android:inputType="textPassword" />
    
  	
  	<Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:text="@string/register_button" />

  	<Button
  	    android:id="@+id/return_to_login_button"
  	    style="?android:attr/buttonStyleSmall"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_alignRight="@+id/register_password"
  	    android:layout_below="@+id/username_prompt"
  	    android:layout_marginTop="21dp"
  	    android:text="@string/return_to_login_button" />

</RelativeLayout>