<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmsc434.funpath.login.HomeActivity"
    android:background="@drawable/background"
     >



    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:hint="@string/username_hint"
        android:ems="10" >
        <requestFocus />
	</EditText>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_username"
        android:layout_below="@+id/login_username"
        android:layout_marginTop="70dp"
        android:hint="@string/password_hint"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/password_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_password"
        android:layout_alignLeft="@+id/login_password"
        android:layout_marginBottom="34dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/username_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_username"
        android:layout_alignLeft="@+id/login_username"
        android:layout_marginBottom="38dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/new_user_register_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_username"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_button"
        android:text="@string/new_user_button" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="225dp"
        android:layout_height="75dp"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/my_button"
        android:text="@string/login_button" />

</RelativeLayout>