<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/cyan"
    tools:context="cmsc434.funpath.login.HomeActivity" >



    <TextView
        android:id="@+id/welcome_to_funpath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hi_username"
        android:layout_below="@+id/hi_username"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_to_funpath"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/hi_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/generate_custom_run_button"
        android:layout_marginTop="77dp"
        android:text="@string/hi"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/generate_custom_run_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/welcome_to_funpath"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/generate_custom_run" />

    <Button
        android:id="@+id/view_past_runs_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/generate_custom_run_button"
        android:layout_below="@+id/generate_custom_run_button"
        android:layout_marginTop="28dp"
        android:text="@string/view_past_runs" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/trail_mod_stretched" />

</RelativeLayout>
