<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_bottomless"
    tools:context="cmsc434.funpath.login.HomeActivity" >

	<fragment
	    android:id="@+id/preview_map"
	    android:name="com.google.android.gms.maps.MapFragment"
	    android:layout_width="match_parent"
	    android:layout_height="320dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    tools:context=".PreviewRunActivity" />

	<TextView
	    android:id="@+id/preview_distance"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/preview_map"
	    android:layout_below="@+id/preview_map"
	    android:text="@string/preview_distance"
	    android:paddingTop="5dp"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/preview_elevation"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/preview_distance"
	    android:layout_below="@+id/preview_distance"
	    android:text="@string/preview_elevation"
	    android:paddingTop="5dp"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<Button
	    android:id="@+id/preview_generate_run"
	    android:layout_width="140dp"
	    android:layout_height="50dp"
	    android:layout_alignLeft="@+id/preview_elevation"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="10dp"
	    android:background="@drawable/my_button"
	    android:text="@string/preview_generate_run"
	    android:textSize="14sp" />

	<Button
	    android:id="@+id/preview_begin_run"
	    android:layout_width="140dp"
	    android:layout_height="50dp"
	    android:layout_alignParentBottom="true"
	    android:layout_alignRight="@+id/preview_map"
	    android:background="@drawable/my_button"
	    android:layout_marginBottom="10dp"
	    android:drawableLeft="@drawable/runner_transparent_small"
	    android:text="@string/preview_begin_run"
	    android:textSize="14sp" />

</RelativeLayout>
