<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_bottomless"
    tools:context="cmsc434.funpath.login.HomeActivity" >

	<fragment
	    android:id="@+id/map"
	    android:name="com.google.android.gms.maps.MapFragment"
	    android:layout_width="match_parent"
	    android:layout_height="350dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    tools:context=".run.RunTrackerActivity" />

	<TextView
	    android:id="@+id/timeDisplay"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/distanceDisplay"
	    android:layout_below="@+id/distanceDisplay"
	    android:text="@string/review_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/distanceDisplay"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/map"
	    android:layout_below="@+id/map"
	    android:layout_marginTop="18dp"
	    android:text="@string/review_distance"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<ProgressBar
	    android:id="@+id/progressBar"
	    style="?android:attr/progressBarStyleHorizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/distanceDisplay"
	    android:layout_alignRight="@+id/map"
	    android:layout_below="@+id/map"
	    android:max="100"
	    android:progress="0" />

	<Button
	    android:id="@+id/finishRunButton"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/pauseRunButton"
	    android:layout_alignBottom="@+id/pauseRunButton"
	    android:layout_alignRight="@+id/progressBar"
	    android:background="@drawable/my_button"
	    android:text="@string/finish_run_button" />

	<Button
	    android:id="@+id/pauseRunButton"
	    android:layout_width="155dp"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/timeDisplay"
	    android:layout_alignParentBottom="true"
	    android:background="@drawable/my_button"
	     android:drawableLeft="@drawable/pause_small"
	    android:text="@string/pause_run_button" />

</RelativeLayout>
