<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmsc434.funpath.login.HomeActivity"
    android:background="@drawable/background">

    

    
    
    
    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="90dp"
       	android:background="@drawable/my_textfields"
       	android:id="@+id/distance_relative_layout1"
        android:layout_centerHorizontal="true" >

	    <TextView
	        android:id="@+id/preview_elevation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="16dp"
	        android:layout_marginTop="14dp"
	        android:textColor="#ffffff"
	        android:text="@string/distance" />

	    <Switch
	        android:id="@+id/kmMiSwitch"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/distanceField"
	        android:layout_alignBottom="@+id/distanceField"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="20dp"
	        android:textOff="mi"
	        android:textOn="km" />

	    <EditText
	        android:id="@+id/distanceField"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/preview_elevation"
	        android:layout_below="@+id/preview_elevation"
	        android:layout_marginTop="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_toLeftOf="@+id/kmMiSwitch"
	        android:background="@color/white"
	        android:ems="10"
	        android:inputType="number|numberDecimal" />
        
    </RelativeLayout>
    
    
    
    
    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/my_textfields"
        android:id="@+id/distance_relative_layout2"
        android:layout_below="@+id/distance_relative_layout1"
        android:layout_centerHorizontal="true" >
	    
	    <EditText
	        android:id="@+id/locationField"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/preview_distance"
	        android:layout_below="@+id/preview_distance"
	        android:layout_marginTop="10dp"
	        android:background="@color/white"
	        android:ems="10"
	        android:inputType="number" />

	    <TextView
	        android:id="@+id/preview_distance"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="16dp"
	        android:textColor="#ffffff"
	        android:text="@string/location" />
        
    </RelativeLayout>



    
    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_below="@+id/distance_relative_layout2"
        android:layout_marginTop="15dp"
        android:id="@+id/distance_relative_layout3"
        android:background="@drawable/my_textfields"
        android:layout_centerHorizontal="true" >
	    
	    <SeekBar
	        android:id="@+id/hillySeekBar"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:layout_below="@+id/elevation_changed_text"
	        android:layout_marginTop="10dp"
	        android:background="@color/white" />
	
	    <TextView
	        android:id="@+id/text_low"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/elevation_changed_text"
	        android:layout_below="@+id/hillySeekBar"
	        android:textColor="#ffffff"
	        android:layout_marginTop="18dp"
	        android:text="@string/low_elevation_change" />
	
	    <TextView
	        android:id="@+id/text_med"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/text_low"
	        android:layout_alignBottom="@+id/text_low"
	        android:textColor="#ffffff"
	        android:layout_centerHorizontal="true"
	        android:text="@string/med_elevation_change" />

	    <TextView
	        android:id="@+id/elevation_changed_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="16dp"
	        android:layout_toLeftOf="@+id/text_med"
	        android:textColor="#ffffff"
	        android:text="@string/elevation" />

	    <TextView
	        android:id="@+id/text_high"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/text_med"
	        android:layout_alignBottom="@+id/text_med"
	        android:layout_alignParentRight="true"
	        android:textColor="#ffffff"
	        android:layout_marginRight="14dp"
	        android:text="@string/high_elevation_change" />
        
    </RelativeLayout>
    
    

    <Button
        android:id="@+id/nextButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance_relative_layout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/my_button"
        android:text="@string/next_button" />

 

</RelativeLayout>