
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmsc436.project.thermalcamera.MainActivity" >

    <RelativeLayout
        android:id="@+id/map"
	    android:layout_width="match_parent"
	    android:layout_height="350dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="15dp"
	    android:layout_marginLeft="15dp">
    </RelativeLayout>
    <!-- 
	<fragment
        android:id="@+id/saved_map"
	    android:name="com.google.android.gms.maps.SupportMapFragment"
	    android:layout_width="match_parent"
	    android:layout_height="350dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true" /> -->
    
	<!--
	<fragment
	    android:id="@+id/saved_map"
	    android:name="com.google.android.gms.maps.MapFragment"
	    android:layout_width="match_parent"
	    android:layout_height="320dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    tools:context=".run.FinishRunActivity" />
	-->
	
    <TextView
        android:id="@+id/saved_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/map"
        android:layout_below="@+id/map"
        android:paddingTop="5dp"
        android:text="@string/saved_distance"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/saved_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/saved_distance"
        android:layout_below="@+id/saved_distance"
        android:text="@string/saved_time"
        android:paddingTop="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/saved_elevation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/saved_time"
        android:layout_below="@+id/saved_time"
        android:paddingTop="5dp"
        android:text="@string/saved_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	
    <Button
        android:id="@+id/rerun_saved_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/saved_delete_button"
        android:layout_toLeftOf="@+id/saved_delete_button"
        android:text="@string/rerun_saved" />
    
    <Button
        android:id="@+id/saved_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/map"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/trash_can_small" />

    <!-- 
    <LinearLayout android:id="@+id/undobar" style="@style/UndoBar">
        <TextView android:id="@+id/undobar_message" style="@style/UndoBarMessage" />
        <Button android:id="@+id/undobar_button" style="@style/UndoBarButton" />
    </LinearLayout> -->

</RelativeLayout>
